k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bftest
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: bftest
  replicas: 1
  template:
    metadata:
      labels:
         app: bftest
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: bftest
           image: localhost:5000/bftest:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bftest
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: bftest
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
